tests/NormalTests/paczka1/fuzzy1/63883629.err
Error in line 15: uiBMpeLc A31 82,6
Error in line 17: uiBMpeLc S862 31,2
Error in line 23: eOW A31 34,3
Error in line 31: eOW A802 37,9
